force-app/main/default/objects/Movement_Code__c/fields/CL_Lease_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CL_Lease_Transaction_Type__c</fullName>
    <label>CL Lease Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCRUAL</fullName>
            </value>
            <value>
                <fullName>BILLING</fullName>
            </value>
            <value>
                <fullName>BOOKING</fullName>
            </value>
            <value>
                <fullName>PAYMENT</fullName>
            </value>
            <value>
                <fullName>RESTRUCTURE</fullName>
            </value>
            <value>
                <fullName>TAX</fullName>
            </value>
            <value>
                <fullName>TERMINATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>