force-app/main/default/objects/Movement_Code__c/fields/Contract_Install_State_Location__c.field-meta.xml
<CustomField>
    <fullName>Contract_Install_State_Location__c</fullName>
    <label>Contract Install State Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>