force-app/main/default/objects/Movement_Code__c/fields/Payment_Tax_Eligible_GL_Account_Codes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Tax_Eligible_GL_Account_Codes__c</fullName>
    <label>Payment Tax Eligible GL Account Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>