force-app/main/default/objects/Movement_Code__c/fields/Transaction_Eligible_GL_Account_Codes__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Eligible_GL_Account_Codes__c</fullName>
    <description>Eligible GL Account Codes for Transactions. (ACCRUAL, BILLING RENT, BOOKING, PAYMENT RENT, RESTRUCTURE, TAX, TERMINATION)</description>
    <inlineHelpText>Eligible GL Account Codes for Transactions. (ACCRUAL, BILLING RENT, BOOKING, PAYMENT RENT, RESTRUCTURE, TAX, TERMINATION)</inlineHelpText>
    <label>Transaction Eligible GL Account Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>