force-app/main/default/objects/Movement_Code__c/fields/Transaction_Type_in_OLFM__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_in_OLFM__c</fullName>
    <label>Transaction Type in OLFM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>